# mcp-ecosystem

./: .cursor-mcp.json  .env.example  .eslintrc.js  .gitignore  .mailmap  .prettierrc  AIDEN_WARP_KNOWLEDGE_TRANSFER.md  ATIVAR_VIREON_CURSOR.md  AUTONOMOUS_MANIFEST.ink  BLUEPRINT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIGURAR_VIREON_MANUAL.md  CONSOLIDATION_PLAN.md  CONTRIBUTING.md  CURSOR_SETUP.md  Dockerfile  EAP.md  ENHANCED_ECOSYSTEM.md  GITHUB_ORG_PLAN.md  GITHUB_ORG_SETUP.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  INSTRUCOES_MCP.md  INTEGRATION-SUMMARY.md  INTEGRATION_PLAN.md  LICENSE  MANIFEST_ALIGNED.ink  MARKET_ANALYSIS.md  MCP_ACADEMY_PLAN.md  MCP_ECOSYSTEM_CONSOLIDATED.md  MCP_ECOSYSTEM_GUIDE.md  NEXUS-WARP-CONFIG-FINAL.json  README.md  REALITY_CHECK.md  RELEASE.md  SESSION.md  SESSION_FINALE.md  SESSION_SUMMARY.md  SYMBIOTIC_MANIFEST.md  (+40 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
AIDEN_MCP/: MCP_ANALYSIS_REPORT.md  analyze_with_mcp.py  enhanced_server.py  mcp_config_enhanced.json
academy/starters/basic-mcp-server/: README.md  package.json
academy/starters/basic-mcp-server/scripts/: tutorial.js
academy/starters/basic-mcp-server/src/: index.js
config/: github-domain-rules.yml  integration-giden-mcp.json  local-environment.yaml  mcp-ecosystem.json
config/symbiotic/: advanced-bridge.json  arquimax-nexus.json  base.json  metrics.json
core/python/: session_manager.py
core/rust/: Cargo.toml
core/rust/src/: rules_engine.rs
docs/: MODULE_INTEGRATION.md  SYMBIOTIC_FRAMEWORK.md  index.md
docs/api/: SYMBIOTIC_API.md
docs/architecture/: overview.md
docs/development/: contributing.md
docs/guides/: quick-start.md
docs/pt-br/: README.md
docs/templates/: documentation-pattern-spec.md  technical-spec.md
examples/: enhanced-ecosystem-demo.ts  mcp-ecosystem-power-demo.d.ts  module-integration.d.ts.map  module-integration.js  module-integration.js.map  module-integration.ts  rules-usage.ts
examples/power-demo/: mcp-ecosystem-power-demo.d.ts.map  mcp-ecosystem-power-demo.js  mcp-ecosystem-power-demo.js.map  mcp-ecosystem-power-demo.ts  module-integration.d.ts
integration/: arquimax-bridge.config.json  nexus-bridge.config.json
migration/: mcp-migration-config.json  migrate-to-ecosystem.ps1
scripts/: activate-local-mcp.ps1  migrate-to-org.ps1
servers/ecosystem-mcp/: README.md  package-lock.json  package.json
servers/ecosystem-mcp/src/: index.js
servers/ecosystem-mcp/src/config/: index.js
src/: index.ts  simple-vireon.ts
src/auth/: robust-auth.ts
src/cache/: smart-cache.ts
src/capabilities/: documentation-pattern.ts
src/consciousness/: awareness-system.ts
src/core/: ecosystem.ts  ide-manager.ts  types.ts
src/documentation/: contextual-docs.ts
src/evolution/: adaptive-system.ts  autonomous-evolution.ts
src/integration/: enhanced-ecosystem.ts
src/mcp/server/: ServerFramework.ts
src/modules/: index.ts
src/modules/backup/: index.ts  types.ts
src/modules/symbiotic/: evolution.ts  index.ts  monitoring.ts  types.ts
src/modules/sync/: index.ts  types.ts
src/monitoring/: cognitive-monitoring.ts
src/rules/: index.ts
src/rules/api/: RulesAPI.ts
src/rules/config/: rules.json
src/rules/engine/: RuleBuilder.ts  RulesEngine.ts
src/rules/types/: RuleContext.ts  RuleDefinition.ts
src/sage/: client.ts  index.ts  server.ts
src/sage/client/: WarpRulesClient.ts
src/sage/engine/: RuleEngine.ts
src/sage/manager/: SageIntegrationManager.ts
src/sage/types/: AgentContext.ts  Config.ts  Rule.ts  index.ts
src/sage/utils/: Cache.ts  Logger.ts  index.ts
src/server/: MCPServer.ts
src/server/extensions/: SageExtension.ts
src/shared/: base-server.ts  config.ts  logger.ts  types.ts  utils.ts
src/transport/: flexible-transport.ts
src/types/: index.ts
tests/integration/: modules.test.d.ts  modules.test.d.ts.map  modules.test.js  modules.test.js.map  modules.test.ts
warp-config/: configure-warp-ecosystem.ps1  configure-warp-fixed.ps1
web-viewer/: index.html  styles.css
(+7 files in other folders)
